--- a/style.css
+++ b/style.css
@@ -69,3 +69,29 @@ body {
 .viloyatlar-list {
 	list-style: none;
 }
+
+.viloyatlar-link {
+	font-size: 24px;
+	font-family: 'Bebas Neue' sans-serif;
+	text-transform: uppercase;
+	text-decoration: none;
+	color: #222;
+}
+
+/* following */
+.following {
+	background-color: skyblue;
+}
+
+.following-heading {
+	font-size: 40px;
+	font-family: 'Bebas Neue' sans-serif;
+}
+
+.following-list {
+	list-style: none;
+}
+
+.site-footer {
+	background-color: #fff;
+}
